# testmu-fcb

./: .gitignore  config.json  correct_example.py  deck.md  edge-both.json  edge-empty.json  edge-unknown.json  fcb.schema.json  main.py  mise.toml  presenterm.yaml  pyproject.toml  requirements.txt  test_main.py  wrong_example.py
.claude/: settings.json
docs/: prompt.md
