[project]
name = "fcb"
version = "1.0.0"
description = "FCB is a FOCUS schema based multi-cloud utility tool for adhoc queries."
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "click>=8.4.1",
    "jsonschema>=4.26.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.15", "ty>=0.0.43"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["correct_example.py", "fcb.schema.json"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (style: indentation, whitespace, statements)
    "W",   # pycodestyle warnings (deprecations, trailing whitespace)
    "F",   # pyflakes (logical errors: unused imports/vars, undefined names)
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear (common bugs)
    "A",   # builtins shadowing
    "C4",  # comprehensions
    "SIM", # flake8-simplify
    "RET", # return statements
    "ARG", # unused arguments
    "PTH", # use pathlib
    "ERA", # no commented-out code
    "RUF", # ruff-specific
    "D",   # pydocstyle — require docstrings
    "ANN", # type annotations
    "S",   # bandit (security)
    "TRY", # tryceratops (exception handling)
]
ignore = [
    "D203",   # conflicts with D211 (no blank line before class)
    "D213",   # conflicts with D212 (summary on first line)
    "D100",   # don't require module-level docstring everywhere
    "D104",   # don't require package docstring
    "ANN401", # allow `Any` where it actually fits
    "TRY003", # long exception messages are fine inline
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_main.py" = ["D", "ANN", "S", "ARG", "PLR2004"]
